# speedo-gauge-lvgl

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/lvgl__lvgl/: lv_conf_template.h  lvgl.h
components/lvgl__lvgl/tests/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/EXIO/: TCA9554PWR.c
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
main/PCF85063/: PCF85063.c  PCF85063.h
main/QMI8658/: QMI8658.c  QMI8658.h
main/SD_Card/: SD_SPI.c  SD_SPI.h
main/Touch_Driver/: CST820.c  CST820.h
main/UI/: Speedo_demo.c  Speedo_demo.h
main/UI/fonts/: montserrat_bold_120.h  montserrat_bold_28.h  montserrat_bold_80.h
main/Wireless/: Wireless.c
