idf_component_register(
                        SRCS  "main.c" 
                              "EXIO/TCA9554PWR.c"
                              "LCD_Driver/ST7701S.c" 
                              "Touch_Driver/CST820.c"
                              "Touch_Driver/esp_lcd_touch/esp_lcd_touch.c" 
                              "LVGL_Driver/LVGL_Driver.c"
                              "I2C_Driver/I2C_Driver.c"
                              "PCF85063/PCF85063.c"
                              "QMI8658/QMI8658.c"
                              "SD_Card/SD_SPI.c"
                              "LVGL_UI/LVGL_Example.c"
                              "UI/Speedo_demo.c"
                              "Wireless/Wireless.c"
                              "Buzzer/Buzzer.c"

                        INCLUDE_DIRS "./EXIO"
                                     "./LCD_Driver"
                                     "./Touch_Driver" 
                                     "./Touch_Driver/esp_lcd_touch"  
                                     "./LVGL_Driver"
                                     "./I2C_Driver"
                                     "./PCF85063"
                                     "./QMI8658"
                                     "./SD_Card"
                                     "./LVGL_UI"
                                     "./UI"
                                     "./UI/fonts"
                                     "./Wireless"
                                     "./Buzzer"
                                     "."
                        )
